--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,4 +161,12 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/launch")
   install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
 endif()
 
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/config")
+  install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
+endif()
+
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/rviz")
+  install(DIRECTORY rviz DESTINATION share/${PROJECT_NAME})
+endif()
+
 ament_package()
